--- a/CloudSync/CloudSync.csproj
+++ b/CloudSync/CloudSync.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="8.0.0-preview.2.23128.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CloudSync.Common\CloudSync.Common.csproj" />
+  </ItemGroup>
+
 </Project>
